# brew-tui

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: brew-repos.md  index.md  usage.md
scripts/: create_sample_recipe_data.py  import_beerproto_ingredients.py  screenshots.py
src/brew_tui/: __main__.py  app.py  brew_tui.tcss  config.py  engine.py  ingredients.py  inventory.py  inventory_edit_screen.py  inventory_screen.py  recipe_io_screen.py  recipe_wizard_screen.py  styles.py  units.py  widgets.py
src/brew_tui/data/: beerproto_ingredients.json
tests/: test_app.py  test_config.py  test_engine.py  test_ingredients.py  test_inventory.py  test_inventory_edit.py  test_recipe_io.py  test_recipe_wizard.py  test_styles.py  test_units.py
