[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["brew_tui*"]

[tool.setuptools.package-data]
brew_tui = ["data/*.json", "*.tcss"]

[project]
name = "brew-tui"
version = "0.1.0"
description = "Interactive homebrew recipe helper TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
brew-tui = "brew_tui.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
